@startuml

hide circle
skinparam linetype ortho
skinparam shadowing false
skinparam monochrome true
skinparam DefaultFontName Helvetica
skinparam DefaultFontSize 15

entity User {
id
created_at
updated_at
email
encrypted_password
reset_password_token
reset_password_sent_at
remember_created_at
first_name
last_name
}
entity Department {
id
name
created_at
updated_at
school_id
}
entity Faculty {
id
is_part_time
departments_id
created_at
updated_at
}
entity Student {
is_part_time
is_graduate
created_at
updated_at
id
}
entity Section {
id
course_id
faculty
timeslot
location
created_at
updated_at
}
entity Course {
id
title
description
created_at
updated_at
department_id
}
entity Hold {
id
hold_type
created_at
updated_at
}
entity School {
id
dean
assistant_dean
created_at
updated_at
name
}

User ||--|| Student
User ||--|| Faculty
Department ||--o{ Course
Faculty ||--|| User
Student ||--|| User
Course ||--o{ Section
School ||--o{ Department

@enduml
